feat: add news rotas swagger
